crates/toml/tests/snapshots/invalid/local-time/time-no-leads-02.stderr
TOML parse error at line 2, column 5
  |
2 | d = 01:32:0
  |     ^^^^^^^
invalid time, expected a two-digit second (SS)
